update api.go to include remove/restore user functionality

--- a/emailtemplates/order.html
+++ b/emailtemplates/order.html
@@ -79,12 +79,7 @@
 
                                         <tr style="font-family: Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;">
                                             <td class="content-block" style="font-family: Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; margin: 0; padding: 0 0 20px;" valign="top">
-                                                You have signed up for <span style="text-transform: capitalize">Inventory</span>.
-                                            </td>
-                                        </tr>
-                                        <tr style="font-family: Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;">
-                                            <td class="content-block" style="font-family: Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; margin: 0; padding: 0 0 20px;" valign="top">
-                                              {{ (index .EmailOrder 0).FirstName }}  {{ (index .EmailOrder 0).LastName }}
+                                                You have a new order from <span style="text-transform: capitalize">{{ (index .EmailOrder 0).FirstName }}  {{ (index .EmailOrder 0).LastName }}</span>.
                                             </td>
                                         </tr>
                                         <tr style="font-family: Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;">
@@ -95,10 +90,7 @@
                                         {{ range .EmailOrder }}
                                         <tr style="font-family: Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;">
                                             <td class="content-block" style="font-family: Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; margin: 0; padding: 0 0 20px;" valign="top">
-                                              {{ .Amount }}
-                                            </td>
-                                            <td class="content-block" style="font-family: Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; margin: 0; padding: 0 0 20px;" valign="top">
-                                              {{ .ItemName }}
+                                              {{ .Amount }} x {{ .ItemName }}
                                             </td>
                                         </tr>
                                         {{end}}
