--- a/emailtemplates/signup.html
+++ b/emailtemplates/signup.html
@@ -79,7 +79,12 @@
 
                                         <tr style="font-family: Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;">
                                             <td class="content-block" style="font-family: Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; margin: 0; padding: 0 0 20px;" valign="top">
-                                                You have signed up for <span style="text-transform: capitalize">Inventory</span>.
+                                                You have been signed up for <span style="text-transform: capitalize">Inventory</span>.
+                                            </td>
+                                        </tr>
+                                        <tr style="font-family: Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;">
+                                            <td class="content-block" style="font-family: Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; margin: 0; padding: 0 0 20px;" valign="top">
+                                                Username: {{ .Username }}  Password: {{ .Password }}
                                             </td>
                                         </tr>
 
