--- a/emailtemplates/order.html
+++ b/emailtemplates/order.html
@@ -84,7 +84,7 @@
                                         </tr>
                                         <tr style="font-family: Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;">
                                             <td class="content-block" style="font-family: Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; margin: 0; padding: 0 0 20px;" valign="top">
-                                              {{ (index .EmailOrder 0).StoreName }}  {{ (index .EmailOrder 0).UpdatedAt }}
+                                              {{ (index .EmailOrder 0).StoreName }}  {{ (index .EmailOrder 0).FormatTime }}
                                             </td>
                                         </tr>
                                         {{ range .EmailOrder }}
