updating formatting in golang

--- a/emailtemplates/password_reset.html
+++ b/emailtemplates/password_reset.html
@@ -96,7 +96,7 @@
 
                                         <tr style="font-family: Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;">
                                             <td class="content-block" style="font-family: Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; margin: 0; padding: 0 0 20px;" valign="top">
-                                                <a href="{{.Route}}/passwordreset/{{.UserUuid}}?code={{.Code}}" class="btn-primary" itemprop="url"
+                                                <a href="{{.Route}}/passwordreset/{{.UserUUID}}?code={{.Code}}" class="btn-primary" itemprop="url"
                                                     style="font-family: Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; color: #FFF; text-decoration: none; line-height: 2em; font-weight: bold; text-align: center; cursor: pointer; display: inline-block; border-radius: 5px; text-transform: capitalize; background-color: #0062b5; margin: 0; border-color: #0062b5; border-style: solid; border-width: 10px 20px;">
                                                     Reset Your Password
                                                 </a>
