--- a/emailtemplates/password_reset.html
+++ b/emailtemplates/password_reset.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width" />
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
-        <title>Inventory Password Reset</title>
+        <title>Stock Up Password Reset</title>
 
         <style type="text/css">
             img {
@@ -88,7 +88,7 @@
 
                                         <tr style="font-family: Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;">
                                             <td class="content-block" style="font-family: Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; margin: 0; padding: 0 0 20px;" valign="top">
-                                                You have requested a new password for Inventory for the account of <a href="mailto:{{.Username}}">{{.Username}}</a>.
+                                                You have requested a new password for Stock Up for the account of <a href="mailto:{{.Username}}">{{.Username}}</a>.
                                                 No changes have been made to your account yet.<br/><br/>
                                                 You can reset your password by clicking the link below:
                                             </td>
