--- a/emailtemplates/signup.html
+++ b/emailtemplates/signup.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width" />
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
-        <title>Inventory Signup</title>
+        <title>Stock Up Signup</title>
 
         <style type="text/css">
             img {
@@ -79,7 +79,7 @@
 
                                         <tr style="font-family: Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;">
                                             <td class="content-block" style="font-family: Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; margin: 0; padding: 0 0 20px;" valign="top">
-                                                You have been signed up for <span style="text-transform: capitalize">Inventory</span>.
+                                                You have been signed up for <span style="text-transform: capitalize">Stock Up</span>.
                                             </td>
                                         </tr>
                                         <tr style="font-family: Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;">
